--- a/index.html
+++ b/index.html
@@ -643,6 +643,7 @@
                             dans des galeries internationales.</p>
                     </div>
                 </div>
+                    <p><img src="images/eau4.jpg" alt="Reflets sur l'eau" style="width: 100%; padding-top: 2rem;"></p>
             </div>
         </section>
     </div>
@@ -671,6 +672,7 @@
                         Président du Festival Photo de St-Cergue
                     </p>
                 </div>
+                    <p><img src="images/eau1.jpg" alt="Reflets sur l'eau" style="width: 100%; padding-top: 2rem;"></p>
             </div>
         </section>
     </div>
