--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         }
 
         /* Responsive Design */
-        @media (max-width: 768px) {
+        @media (max-width: 1024px) {
             .mobile-menu-btn {
                 display: block;
             }
@@ -556,7 +556,7 @@
         <section class="hero">
             <div class="hero-bg"></div>
             <div class="hero-content">
-                <a href="https://letempsdunepose.ch/"><img src="images/logo-clair.png" alt="Logo Club Photo de St-Cergue"></a>
+                <a href="https://letempsdunepose.ch/"><img src="images/logo-clair.png" alt="Logo Club Photo de St-Cergue" style="width: 80%;"></a>
                 <p class="date-location">présente le...</p>
                 <h1>1er Festival Photographique de St-Cergue</h1>
                 <p class="subtitle">L'eau dans tous ses états</p>
