--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             width: 110%;
             height: 100%;
             background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><defs><pattern id="water" patternUnits="userSpaceOnUse" width="100" height="100"><path d="M0,50 Q25,30 50,50 T100,50" stroke="rgba(255,255,255,0.1)" stroke-width="2" fill="none"/></pattern></defs><rect width="100%" height="100%" fill="url(%23water)"/></svg>');
-            animation: wave 20s linear infinite;
+            animation: wave 10s alternate infinite;
         }
 
         @keyframes wave {
