--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                     <h3 style="color: var(--primary-color); text-align: center; margin-bottom: 2rem;">
                         Devenir Sponsor
                     </h3>
-                    <form action="mailto:info@festivalphotostcergue.ch" method="post" enctype="text/plain">
+                    <form action="mailto:info@maillard.li" method="post" enctype="text/plain">
                         <div class="form-group">
                             <label for="company">Nom de l'entreprise *</label>
                             <input type="text" id="company" name="company" required>
