--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                             dans des galeries internationales.</p>
                     </div>
                 </div>
-                    <p><img src="images/eau4.jpg" alt="Reflets sur l'eau" style="width: 100%; padding-top: 2rem;"></p>
+                <p><img src="images/eau4.jpg" alt="Reflets sur l'eau" style="width: 100%; padding-top: 2rem;"></p>
             </div>
         </section>
     </div>
@@ -672,7 +672,7 @@
                         Président du Festival Photo de St-Cergue
                     </p>
                 </div>
-                    <p><img src="images/eau1.jpg" alt="Reflets sur l'eau" style="width: 100%; padding-top: 2rem;"></p>
+                <p><img src="images/eau1.jpg" alt="Reflets sur l'eau" style="width: 100%; padding-top: 2rem;"></p>
             </div>
         </section>
     </div>
@@ -691,7 +691,7 @@
                     <h3 style="color: var(--primary-color); text-align: center; margin-bottom: 2rem;">
                         Devenir Sponsor
                     </h3>
-                    <form action="mailto:info@maillard.li" method="post" enctype="text/plain">
+                    <form action="mailto:info@festivalphotostcergue.ch" method="post" enctype="text/plain">
                         <div class="form-group">
                             <label for="company">Nom de l'entreprise *</label>
                             <input type="text" id="company" name="company" required>
