--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         </p>
                     </section>
 
-                    <section id="article2">
+                    <section>
                         <h2>Article 2: Comment exposer</h2>
 
                         <h3>2_A: Formulaire d'inscription</h3>
@@ -312,9 +312,9 @@
                             <li>Le dossier doit être déposé au format <code>.ZIP</code>.</li>
                             <li>
                                 Le dossier doit être nommé de la manière suivante: <br>
-                                <strong style="font-family: monospace; color: #1d4ed8;">"NOM Prénom_Titre de votre série exposée"</strong><br>
+                                <strong>"NOM Prénom_Titre de votre série exposée"</strong><br>
                                 Les images seront nommées de la manière suivante:<br>
-                                <strong style="font-family: monospace; color: #1d4ed8;">"NOM Prénom_Titre de la photo"</strong>
+                                <strong>"NOM Prénom_Titre de la photo"</strong>
                             </li>
                             <li>Le dossier est limité à <strong>1Go</strong>.</li>
                             <li>
@@ -323,27 +323,27 @@
                                     <li><strong>Une série de 10 à 12 photos</strong> que vous souhaitez exposer en respectant le thème du festival.</li>
                                     <li>Une <strong>fiche de présentation</strong> de votre parcours et le lien de votre site internet (si existant).</li>
                                     <li>Tout document utile et pertinent pour votre candidature.</li>
-                                    <li><strong style="color: #dc2626;">Pas d'image générée par l'IA (intelligence artificielle).</strong></li>
+                                    <li><strong>Pas d'image générée par l'IA (intelligence artificielle).</strong></li>
                                 </ul>
                             </li>
                         </ol>
 
                         <h3>2_B: Organisation</h3>
-                        <p>L'appel à candidature est ouvert jusqu'au <strong style="color: #ef4444;">[date à définir] 2025 minuit</strong>, date limite d'envoi des dossiers.</p>
+                        <p>L'appel à candidature est ouvert jusqu'au <strong>[date à définir] 2025 minuit</strong>, date limite d'envoi des dossiers.</p>
                         <p>À l'issue de cette période, les dossiers seront présentés à un jury de sélection composé des membres du comité d'organisation.</p>
                         <p>Les candidats dont le dossier est retenu seront informés dans les plus brefs délais suivant la délibération. Les candidats dont les dossiers ne sont pas retenus seront personnellement contactés.</p>
-                        <p>La thématique des expositions photos devra obligatoirement porter et respecter le thème du festival <strong style="color: #2563eb;">"L'EAU DANS TOUS SES ÉTATS"</strong>.</p>
+                        <p>La thématique des expositions photos devra obligatoirement porter et respecter le thème du festival <strong>"L'EAU DANS TOUS SES ÉTATS"</strong>.</p>
                         <p>Le respect de la faune, de la flore et des milieux naturels d'où proviennent les prises de vue sont des critères importants pour le comité de sélection.</p>
                         <p>La participation à l'appel à exposer est gratuite.</p>
                     </section>
 
-                    <section id="article3">
+                    <section>
                         <h2>Article 3: Règlement candidature</h2>
                         <p>En soumettant sa candidature, le/la photographe certifie qu'il/elle est l'auteur/trice des photographies proposées et qu'il/elle en possède légalement tous les droits.</p>
                         <p>Les photographes sélectionnés mettront gracieusement à la disposition de l'association organisatrice les fichiers numériques ou 5 images [nombre d'images à définir] de leur exposition qui seront libres de droit et serviront à la promotion du Festival ainsi que des partenaires.</p>
                         <p>Ces fichiers seront toujours utilisés avec des mentions légales protégeant leurs auteurs/trices.</p>
                         <p>Le Festival Photo de Saint-Cergue mettra à disposition des photographes sélectionnés un espace d'exposition. La production de l'exposition est à la charge de l'auteur. Le Festival ne prendra en charge aucun frais lié à l'édition, à l'encadrement ou au transport des photographies.</p>
-                        <p>Les photographes sélectionnés devront obligatoirement être présents durant les 3 journées d'ouverture au public du festival <strong style="color: #ef4444;">[à définir pour le vendredi après-midi]</strong>.</p>
+                        <p>Les photographes sélectionnés devront obligatoirement être présents durant les 3 journées d'ouverture au public du festival <strong>[à définir pour le vendredi après-midi]</strong>.</p>
                         <p>Les photographes sélectionnés seront seuls responsables de l'accrochage de leurs photographies le <strong>vendredi matin 13 mars 2026</strong> et de leur décrochage le <strong>dimanche 15 mars après 17h</strong> et 19 heures au plus tard [à définir].</p>
                         <p>Les organisateurs du festival se réservent le droit, en cas de force majeure, de modifier le présent règlement ou d'annuler l'édition 2026.</p>
                         <p>Données personnelles: les données collectées feront l'objet d'un traitement informatique pour la gestion des candidatures. Les Participants disposent d'un droit d'accès, de rectification et d'opposition sur les données les concernant.</p>
