Update comite.jpg, gafner01-1920.jpg, greppin01-1920.jpg, and 5 more files

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <h1>1er Festival Photographique de St-Cergue</h1>
                 <p class="subtitle">L'eau dans tous ses états</p>
                 <p class="date-location">13-15 Mars 2026 • St-Cergue</p>
-                <a href="dossier-presse.pdf" class="cta-button">Dossier de Presse PDF</a>
+                <p><a href="dossier-presse.pdf" class="cta-button">Dossier de Presse PDF</a></p>
+                <p style="color: red; font-family: monospace; font-size: 10rem; margin-top: 5rem;">&darr;</p>
             </div>
         </section>
 
@@ -54,7 +55,7 @@
                         <p>Ce festival réunit des photographes passionnés qui capturent la beauté et la puissance de l'élément aquatique, élément vital de notre planète.</p>
                     </div>
                     <div class="about-image">
-                        <img src="images/eau1.jpg" alt="Thème de l'eau">
+                        <img src="images/gafner01-1920.jpg" alt="Dominique Gafner">
                     </div>
                 </div>
             </div>
@@ -63,19 +64,19 @@
         <!-- Gallery Preview -->
         <section class="section" style="background: var(--light-bg);">
             <div class="container">
-                <h2>Aperçu des Œuvres</h2>
+                <h2>Aperçu des Oeuvres</h2>
                 <div class="gallery">
                     <div class="gallery-item">
-                        <img src="images/eau2.jpg" alt="Reflets sur l'eau">
-                        <div class="gallery-overlay">Reflets</div>
+                        <img src="images/izac02-1920.jpg" alt="Pierre-Olivier Izac">
+                        <div class="gallery-overlay">Pierre-Olivier Izac</div>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/eau4.jpg" alt="Vagues océaniques">
-                        <div class="gallery-overlay">Vagues</div>
+                        <img src="images/greppin01-1920.jpg" alt="Maurice Greppin">
+                        <div class="gallery-overlay">Maurice Greppin</div>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/eau3.jpg" alt="Gouttelettes de rosée">
-                        <div class="gallery-overlay">Gouttelettes</div>
+                        <img src="images/murer03-1920.jpg" alt="Christiane Murer">
+                        <div class="gallery-overlay">Christiane Murer</div>
                     </div>
                 </div>
             </div>
@@ -119,7 +120,7 @@
                             dans des galeries internationales.</p>
                     </div>
                 </div>
-                <p><img src="images/eau4.jpg" alt="Reflets sur l'eau" style="width: 100%; padding-top: 2rem;"></p>
+                <p><img src="images/ruols03-1920.jpg" alt="Corinne Ruols" style="width: 100%; padding-top: 2rem;"></p>
             </div>
         </section>
     </div>
@@ -133,22 +134,19 @@
                 <div class="president-message">
                     <img src="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 120 120'><circle fill='%23026996' cx='60' cy='60' r='60'/><circle fill='%23ffffff' cx='60' cy='50' r='20'/><ellipse fill='%23ffffff' cx='60' cy='85' rx='25' ry='15'/></svg>" alt="Président" class="president-photo">
                     <div class="quote">
-                        Chers amis photographes et amateurs d'art,
-
-                        C'est avec une immense fierté que le Club Photo de St-Cergue <a href="https://letempsdunepose.ch/">Le Temps d'une Pose</a> vous présente la première édition de notre festival photographique.
-
-                        Le thème "L'eau dans tous ses états" nous invite à redécouvrir cet élément vital sous un regard artistique nouveau. L'eau, source de vie, miroir de nos émotions, architecte de nos paysages, se révèle ici dans toute sa splendeur à travers l'objectif de nos artistes invités.
-
-                        Cette exposition est le fruit d'une passion commune : celle de figer l'instant, de capturer l'émotion, de révéler la beauté qui nous entoure. Je vous invite à vous laisser porter par cette vague créative qui déferlera sur St-Cergue du 13 au 15 mars 2026.
-
-                        Venez nombreux partager ces moments d'exception et plonger dans l'univers fascinant de la photographie aquatique.
+                        <p>Chers amis photographes et amateurs d'art,</p>
+                        <p>C'est avec une immense fierté que le Club Photo de St-Cergue <a href="https://letempsdunepose.ch/">Le Temps d'une Pose</a> vous présente la première édition de notre festival photographique.</p>
+                        <p>Le thème "L'eau dans tous ses états" nous invite à redécouvrir cet élément vital sous un regard artistique nouveau. L'eau, source de vie, miroir de nos émotions, architecte de nos paysages, se révèle ici dans toute sa splendeur à travers l'objectif de nos artistes invités.</p>
+                        <p>Cette exposition est le fruit d'une passion commune&nbsp;: celle de figer l'instant, de capturer l'émotion, de révéler la beauté qui nous entoure. Je vous invite à vous laisser porter par cette vague créative qui déferlera sur St-Cergue du 13 au 15 mars 2026.</p>
+                        <p>Venez nombreux partager ces moments d'exception et plonger dans l'univers fascinant de la photographie aquatique.</p>
                     </div>
                     <p style="text-align: right; margin-top: 2rem; font-weight: bold; color: var(--primary-color);">
                         Dominique Gafner<br>
                         Président du Festival Photo de St-Cergue
                     </p>
                 </div>
-                <p><img src="images/eau1.jpg" alt="Reflets sur l'eau" style="width: 100%; padding-top: 2rem;"></p>
+                <p><img src="images/comite.jpg" alt="Comité du Festival de St-Cergue" style="width: 100%; padding-top: 2rem;"></p>
+                <p style="text-align: center; margin-top: 2rem; font-weight: bold; color: var(--primary-color);">Le comité du Festival Photo de St-Cergue</p>
             </div>
         </section>
     </div>
@@ -295,17 +293,11 @@
                 <div class="president-message">
                     <section id="article1">
                         <h2>Article 1: Candidatures 2026</h2>
-                        <p>
-                            Le club photo "Le Temps d'une Pose" organise son 1er Festival photo de Saint-Cergue et un appel à candidatures pour des photographes amateurs ou professionnels est lancé dès le [à définir].
-                        </p>
-                        <p>
-                            Cette 1ère édition se déroulera du 13 au 15 mars 2026 dans la commune de Saint-Cergue (Suisse), salles communales du Vallon, avec pour thème <strong style="color: #2563eb;">"l'eau dans tous ses états"</strong>.
-                        </p>
+                        <p>Le club photo "Le Temps d'une Pose" organise son 1er Festival photo de Saint-Cergue et un appel à candidatures pour des photographes amateurs ou professionnels est lancé dès le [à définir].</p>
+                        <p>Cette 1ère édition se déroulera du 13 au 15 mars 2026 dans la commune de Saint-Cergue (Suisse), salles communales du Vallon, avec pour thème <strong style="color: #2563eb;">"l'eau dans tous ses états"</strong>.</p>
                     </section>
-
                     <section>
                         <h2>Article 2: Comment exposer</h2>
-
                         <h3>2_A: Formulaire d'inscription</h3>
                         <p>Afin de transmettre votre dossier, merci de respecter les informations suivantes:</p>
                         <ol>
@@ -349,7 +341,7 @@
                         <p>Données personnelles: les données collectées feront l'objet d'un traitement informatique pour la gestion des candidatures. Les Participants disposent d'un droit d'accès, de rectification et d'opposition sur les données les concernant.</p>
                     </section>
                 </div>
-                <p><img src="images/eau1.jpg" alt="Reflets sur l'eau" style="width: 100%; padding-top: 2rem;"></p>
+                <p><img src="images/wyplosz02-1920.jpg" alt="Clément Wyplosz" style="width: 100%; padding-top: 2rem;"></p>
             </div>
         </section>
     </div>
